--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -32,3 +32,8 @@ jobs:
           name: WPFApp
           path: publish/
 
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: "Release ${{ github.run_number }}"
+          files: publish/**/*
