Remove the Creation Git Tag Line

--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -39,17 +39,18 @@ jobs:
           $date = Get-Date -Format "yyyy-MM-dd"
           $tag = "${{ github.ref_name }}-$date-${{ github.run_number }}"
           echo "tag_name=$tag" >> $env:GITHUB_OUTPUT
-
-      - name: Create Git tag
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Set up Git identity
         run: |
-          gh config set -h github.com git_protocol https
-          gh auth setup-git
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Create and push tag
+        run: |
           git tag ${{ steps.tag.outputs.tag_name }}
           git push origin ${{ steps.tag.outputs.tag_name }}
+
+    
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
