--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,5 +23,5 @@ jobs:
 
       - run: dotnet build ${{ env.PROJECT_PATH }}
 
-      - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishingSingleFile=true
+      - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishingSingleFile=true --no-build
           
