--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -24,4 +24,12 @@ jobs:
       - run: dotnet build ${{ env.PROJECT_PATH }}
 
       - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishingSingleFile=true --no-build
+
+
+      - uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
           
